# keepit

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  entities.py  main.py  middleware.py  pyproject.toml  services.py
.github/workflows/: python-app.yml
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Contato.vue  Home.vue  Login.vue
