[tool.poetry]
name = "keepit"
version = "0.1.0"
description = ""
authors = ["Diogo Lima <diogo@dr6.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.75.1"
email-validator = "^1.1.3"
environs = "^9.5.0"
peewee = "^3.14.10"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
